@@ -1,3 +1,7 @@
+2009-11-12  Eric Maupin  <me@ermau.com>
+
+	* StringTest.cs: Added tests for IsNullOrWhitespace
+
 2009-11-11  Eric Maupin  <me@ermau.com>
 
 	* MutableLookupTest.cs: Added tests for .Clear()
